--- a/_includes/note.html
+++ b/_includes/note.html
@@ -1,5 +1,5 @@
 <span class="note_container">
-    <span>^</span>
+    <span class="note_text">^</span>
     <span class="note_content">
         {{ include.content }}
     </span>
